assets/css/style.css
/* ... */
.emelie-name > a {
  text-decoration: none;
  /*-------------------------------------------------------------------------- COLOR ANIMATION */
  animation: wheelHueColor 3s infinite;
  transform: translateY(-50%);
}

.emelie-name > a > h4:hover {
  color: black;
}

.emelie-name > a > h4 {
  display: inline-block;
  font-family: "Rajdhani", sans-serif;
  font-size: 156%;
  margin-top: 20px;
  padding: 2px 5px;
  background-color: rgb(163, 227, 203);
  border: 1px solid black;
  padding: 5px;
}

/* ---------------------------------------------------create color changes for link text #emelie-name > a */

@keyframes wheelHueColor {
  from,
  to {
    color: rgb(92, 176, 233);
  }
  10% {
    color: rgb(228, 99, 196);
  }
  20% {
    color: rgb(209, 64, 173);
  }
}

#emelie-bio {
  width: 20%;
  position: absolute;
  margin: 200px 0 0 710px;
}

#emelie-bio > p {
  width: 100%;
  text-align: left;
  font-size: 124%;
  line-height: 134%;
}

#about-me > a {
  text-decoration: none;
  color: black;
}

#about-me > a > h4 {
  position: absolute;
  margin: 446px 0 0 823px;
  text-transform: uppercase;
  font-size: 156%;
  background-color: #9ddac2;
  padding: 8px;
  border-radius: 50%;
}

#about-me > a > h4:hover {
  color: #f16c6b;
}

.yoga-course {
  height: 600px;
  width: 100%;
  background-color: rgb(174, 198, 222);
  position: relative;
  overflow: hidden;
}

.emelie-image2 {
  float: right;
  margin: 50px 266px 0 0;
}

.bluetext-background {
  width: 400px;
  height: 500px;
  float: left;
  padding: 0 10px;
  background-color: rgb(247, 234, 215);
  margin: 50px 0 0 265px;
}

.bluetext-background > h3 {
  margin-top: 10px;
  font-family: "Mallanna", sans-serif;
  font-size: 200%;
  text-align: center;
  text-transform: capitalize;
}

.bluetext-background > p {
  font-size: 150%;
  text-align: center;
  line-height: 160%;
}

.emelie-image2 span {
  font-weight: bolder;
}

.bluetext-background a {
  text-decoration: none;
  text-align: center;
}

.bluetext-background a > h4 {
  margin-top: 10px;
  font-family: "Rajdhani", sans-serif;
}

.bluetext-background > a > h4 > span {
  font-size: 156%;
  padding: 0 5px;
  background-color: rgb(163, 227, 203);
  border: 1px solid black;
  animation: wheelHueColor 3s infinite;
  transform: translateY(-50%);
}

.bluetext-background > a > h4 > span:hover {
  color: black !important;
}

/* -------------------------------------------------------------------------------footer */

footer {
  width: 100%;
  height: 300px;
  background-color: rgb(163, 227, 203);
  position: relative;
  overflow: hidden;
}

.input-container {
  display: flex;
  width: 100%;
}

.fa-envelope {
  margin-right: 5px;
  font-size: 110%;
}

.center-footer {
  text-align: center;
  margin-top: 10px;
}

.center-footer > h4 {
  background-color: rgb(247, 234, 215);
}

.center-footer > h5 {
  font-size: 10px;
  margin-top: 5px;
}

.signup-form {
  color: rgb(0, 0, 0);
  background-color: rgb(247, 234, 215);
  max-width: 400px;
  padding: 20px 20px 5px;
  margin: 20px auto 0;
}

.signup-form > h2 {
  color: #000000;
  margin-bottom: 20px;
}

.text-input {
  background-color: rgb(163, 227, 203);
  color: #000000;
  width: 100%;
  height: 25px;
  margin: 5px 0 20px 0;
  border: 1px solid #fafafa;
  border-radius: 2px;
  text-align: center;
  font-size: 110%;
}

.text-input:hover {
  border-color: black;
}

.join-button {
  margin: 20px auto;
  border-radius: 2px;
  padding: 15px 32px 15px 32px;
  text-align: center;
  font-size: 100%;
  background-color: rgb(163, 227, 203);
  border: 1px solid rgb(247, 234, 215);
  color: #000000;
  display: block;
}

.join-button:hover {
  color: #f16c6b;
  border: 1px solid black;
}

/* ----------------------------------------------------------VIDEOS.HTML */

.video-background {
  width: 100%;
  height: 1300px;
  background-color: rgb(163, 227, 203);
  overflow: auto;
}

#text-videocourse h2 {
  text-align: center;
  font-family: "Mallanna", sans-serif;
  font-size: 200%;
  margin-top: 10px;
}

.video-color-container {
  width: 90%;
  height: 1200px;
  margin: 10px auto 0;
  padding-top: 20px;
  background-color: rgb(247, 234, 215);
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.video-letters-spacing h4 {
  text-align: center;
}

/* -------------------------------------------------------BIOGRAPHY.HTML */

.biography-background {
  width: 100%;
  height: 727px;
  background-color: rgb(247, 234, 215);
  overflow: hidden;
}

.biography-imagedate {
  float: left;
  text-align: center;
}

.biography-imagedate > h4 {
  margin-top: 20px;
  font-size: 25px;
}

.biography-imagedate > h2 {
  font-size: 45px;
}

.biography-info {
  text-align: left;
  margin-top: 40px;
  margin-right: 40px;
}

.biography-info > h2 {
  text-align: center;
  font-family: "Mallanna", sans-serif;
  font-size: 3rem;
}

.biography-info > p {
  margin-left: 538px;
  font-size: 20px;
  line-height: 2rem;
}

.biography-info > h4 {
  margin-left: 538px;
  margin-top: 40px;
}

/* -------------------------------------------------MEDIA QUERIES */

/*@media only screen and (max-width: 1600px) and (min-width: 1400px) {*/
@media only screen and (min-width: 1368px) and (max-width: 1600px) {
  #cover-text {
    float: none;
    margin: 60px auto 232px;
  }

  #emelie-image > img {
    width: 400px;
    height: 400px;
  }

  .emelie-name {
    font-size: 155%;
  }

  .black-top-border {
    border-top: 2px solid black;
  }
  .video-background {
    height: 860px;
  }

  .video-color-container {
    width: 95%;
    height: 760px;
    margin: 10px auto 0;
  }
}
/* ... */

